master: add and fix stuff
